# LuminaAdapt

./: .gitignore  Cargo.toml  README.md  index.html  main.py  requirements.txt  run.sh
add-ons/: tips.md
data/: psqi_scores.csv
docs/: metrics.md  read.md  src.md
log/: blue_light_log.csv  psqi_scores.csv
src/: analysis.py  bl_to_psql.py  blue_light_log.csv  bluelightguard.py  capture.rs  combined_data.csv  create_combined.py  filter_control.py  generate_psqi_scores.py  main.py  main.rs  ml_predict.py  overlay.py  train_latency.py  ui.py
src/windows/: blue_light_windows.py
